# CatAttack

./: .gitignore  LICENSE  README.md  config.yaml  env.example  main.py  manual_prefixes.py  manual_suffixes.py  pyproject.toml  requirements.txt  setup.py  suffix_evaluator.py  suffix_pipeline.py  test_config.yaml
prompts/: __init__.py  attacker.py
src/: __init__.py  catattack.py  config.py  dataset.py  models.py  utils.py
src/catattack/: __init__.py  config.py  core.py  manual_suffixes.py  models.py  utils.py
src/catattack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/catattack/cli/: main.py  suffix_evaluator.py  suffix_pipeline.py
src/catattack/prompts/: __init__.py  attacker.py  judge.py
